# rdecay

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  KRONOS_FLAGS  Makefile.am  Makefile.in  NEWS  QWERTZ_FLAGS  README  TODO  aclocal.m4  bootstrap  bootstrap.sh  config.h.in  configure  configure.ac
.github/workflows/: test.yml
contrib/: binom.c  rdecay.bat  start.c
doc/: Makefile.am  Makefile.in  rdecay.1
doc/de/: Makefile.am  Makefile.in  rdecay.1
lib/: Makefile.am  Makefile.in
m4/: Makefile.am  Makefile.in
po/: Makefile.in.in  POTFILES.in  de.gmo  de.po  rdecay.pot
src/: DESIGN  Makefile.am  Makefile.in  STATIC1  STATIC2  afield.c  afield.h  arg.c  arg.h  atoms.c  atoms.h  color.c  color.h  coord.c  coord.h  darea.c  darea.h  graph.c  graph.h  gui.c  gui.h  input.c  input.h  main.c  opt.c  opt.h  random.c  random.h  sim.c  sim.h  sound.c  status.c  status.h  test.c  timer.c  timer.h  topwin.c  topwin.h  ui_afield.c  ui_afield.h  (+4 more)
test/: MATCH.c  OUT_LOOP  atom  bench.c  button.c  cast.c  darea.c  floaterr.c  gdkwindow.c  glist.c  gobject.c  gtk.c  image.c  mainloop.c  mathval.c  pixmap.c  rand.c  rdecay2.c  sim.c.OLD  sqrt.c  str.c  threads.c  timer.c  void.c  zerfall.c  zerfall2.c
test/GAUSS/: rdecay1.c  rdecay2.c  real_random.c  sim.c  zerfall2.c
test/TIMER/: timer.c  timer.h  timer2.c  timerPORT.c  timert.c  timert.h  ttt.c
test/highlight/: TEX  sim.c  sim.tex
test/sound/: geiger.au  sound.h
test/tex/: rdecay.c  zerfall.c.tex
